# Rhythm-Game

./: CMakeLists.txt  main.cpp
assets/shaders/: font.frag  hint.frag  hint.vert  line.frag  line.vert  tile.frag
audio/: sound.h
game/: game.h
graphics/: hint.h  line.h  shader.h  tile.h  vertex.h
graphics/gui/font/: font.h
input/: input.cpp  input.h
opengl/freetype-2.13.2/: ChangeLog
opengl/freetype-2.13.2/builds/unix/: aclocal.m4
opengl/freetype-2.13.2/docs/oldlogs/: ChangeLog.20  ChangeLog.21  ChangeLog.210  ChangeLog.22  ChangeLog.23  ChangeLog.24  ChangeLog.25  ChangeLog.26  ChangeLog.27  ChangeLog.28
opengl/freetype-2.13.2/docs/reference/: ft2-bitmap_handling.html  ft2-library_setup.html
opengl/glad/include/glad/: glad.h
opengl/glfw/glfw-3.3.8/docs/html/: group__errors.html
opengl/glfw/glfw-3.3.8/examples/: particles.c  wave.c
opengl/glfw/glfw-3.3.8/include/GLFW/: glfw3.h
opengl/glfw/glfw-3.3.8/src/: egl_context.c  wgl_context.c  win32_joystick.c
opengl/glfw/glfw-3.3.8/tests/: glfwinfo.c
opengl/openal/lib/cmake/OpenAL/: OpenALTargets-release.cmake
opengl/openal/lib/pkgconfig/: openal.pc
utils/: fft.h  random.h  stb_image.h  wav.h
